// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generateAgentStackCompose generates correct YAML for Docker-only host 1`] = `
"# homelab-manager agent stack
# Generated by homelab-manager UI
services:
  socket-proxy:
    image: lscr.io/linuxserver/socket-proxy:latest
    container_name: hlm-socket-proxy
    restart: unless-stopped
    volumes:
      - /var/run/docker.sock:/var/run/docker.sock:ro
    environment:
      CONTAINERS: 1
      EVENTS: 1
      INFO: 1
      IMAGES: 1
      NETWORKS: 1
      VOLUMES: 1
      VERSION: 1
      ALLOW_START: 1
      ALLOW_STOP: 1
      ALLOW_RESTARTS: 1
      POST: 1
      EXEC: 1
      CONTAINERS_CREATE: 1
      CONTAINERS_DELETE: 1
    networks:
      - agent-internal
  agent:
    image: \${AGENT_IMAGE}
    container_name: hlm-agent
    restart: unless-stopped
    ports:
      - \${HLM_AGENT_PORT:-9090}:9090
    environment:
      AGENT_TOKEN_FILE: /run/secrets/agent_token
      DOCKER_HOST: tcp://socket-proxy:2375
    volumes:
      - ./agent-token:/run/secrets/agent_token:ro
    networks:
      - agent-internal
    depends_on:
      - socket-proxy
    labels:
      - hlm.managed=true
      - hlm.role=agent
  agent-updater:
    image: \${AGENT_UPDATER_IMAGE}
    container_name: hlm-agent-updater
    restart: unless-stopped
    volumes:
      - /var/run/docker.sock:/var/run/docker.sock
    environment:
      HLM_WATCH_CONTAINER: hlm-agent
      HLM_WATCH_IMAGE: \${AGENT_IMAGE}
      HLM_CHECK_INTERVAL: \${HLM_CHECK_INTERVAL:-6h}
    labels:
      - hlm.managed=true
      - hlm.role=agent-updater
networks:
  agent-internal:
    driver: bridge
    internal: true
"
`;

exports[`generateAgentStackCompose generates correct YAML for ZFS-only host 1`] = `
"# homelab-manager agent stack
# Generated by homelab-manager UI
services:
  agent:
    image: \${AGENT_IMAGE}
    container_name: hlm-agent
    restart: unless-stopped
    ports:
      - \${HLM_AGENT_PORT:-9090}:9090
    environment:
      AGENT_TOKEN_FILE: /run/secrets/agent_token
    volumes:
      - ./agent-token:/run/secrets/agent_token:ro
      - /usr/sbin/zpool:/usr/sbin/zpool:ro
      - /usr/sbin/zfs:/usr/sbin/zfs:ro
      - /dev/zfs:/dev/zfs
    user: \${HLM_ZFS_UID}:\${HLM_ZFS_GID}
    labels:
      - hlm.managed=true
      - hlm.role=agent
  agent-updater:
    image: \${AGENT_UPDATER_IMAGE}
    container_name: hlm-agent-updater
    restart: unless-stopped
    volumes:
      - /var/run/docker.sock:/var/run/docker.sock
    environment:
      HLM_WATCH_CONTAINER: hlm-agent
      HLM_WATCH_IMAGE: \${AGENT_IMAGE}
      HLM_CHECK_INTERVAL: \${HLM_CHECK_INTERVAL:-6h}
    labels:
      - hlm.managed=true
      - hlm.role=agent-updater
"
`;

exports[`generateAgentStackCompose generates full stack YAML for Docker + ZFS host 1`] = `
"# homelab-manager agent stack
# Generated by homelab-manager UI
services:
  socket-proxy:
    image: lscr.io/linuxserver/socket-proxy:latest
    container_name: hlm-socket-proxy
    restart: unless-stopped
    volumes:
      - /var/run/docker.sock:/var/run/docker.sock:ro
    environment:
      CONTAINERS: 1
      EVENTS: 1
      INFO: 1
      IMAGES: 1
      NETWORKS: 1
      VOLUMES: 1
      VERSION: 1
      ALLOW_START: 1
      ALLOW_STOP: 1
      ALLOW_RESTARTS: 1
      POST: 1
      EXEC: 1
      CONTAINERS_CREATE: 1
      CONTAINERS_DELETE: 1
    networks:
      - agent-internal
  agent:
    image: \${AGENT_IMAGE}
    container_name: hlm-agent
    restart: unless-stopped
    ports:
      - \${HLM_AGENT_PORT:-9090}:9090
    environment:
      AGENT_TOKEN_FILE: /run/secrets/agent_token
      DOCKER_HOST: tcp://socket-proxy:2375
    volumes:
      - ./agent-token:/run/secrets/agent_token:ro
      - /usr/sbin/zpool:/usr/sbin/zpool:ro
      - /usr/sbin/zfs:/usr/sbin/zfs:ro
      - /dev/zfs:/dev/zfs
    user: \${HLM_ZFS_UID}:\${HLM_ZFS_GID}
    group_add:
      - \${DOCKER_GID}
    networks:
      - agent-internal
    depends_on:
      - socket-proxy
    labels:
      - hlm.managed=true
      - hlm.role=agent
  agent-updater:
    image: \${AGENT_UPDATER_IMAGE}
    container_name: hlm-agent-updater
    restart: unless-stopped
    volumes:
      - /var/run/docker.sock:/var/run/docker.sock
    environment:
      HLM_WATCH_CONTAINER: hlm-agent
      HLM_WATCH_IMAGE: \${AGENT_IMAGE}
      HLM_CHECK_INTERVAL: \${HLM_CHECK_INTERVAL:-6h}
    labels:
      - hlm.managed=true
      - hlm.role=agent-updater
networks:
  agent-internal:
    driver: bridge
    internal: true
"
`;

exports[`generateAgentStackEnv generates env for Docker-only host 1`] = `
"AGENT_IMAGE=ghcr.io/homelab-manager/agent:latest
AGENT_UPDATER_IMAGE=ghcr.io/homelab-manager/agent-updater:latest
HLM_AGENT_PORT=9090
"
`;

exports[`generateAgentStackEnv generates env for ZFS-only host 1`] = `
"AGENT_IMAGE=ghcr.io/homelab-manager/agent:v1.0.0
AGENT_UPDATER_IMAGE=ghcr.io/homelab-manager/agent-updater:v1.0.0
HLM_AGENT_PORT=9090
HLM_ZFS_UID=1100
HLM_ZFS_GID=1100
"
`;

exports[`generateAgentStackEnv generates env for Docker + ZFS host 1`] = `
"AGENT_IMAGE=ghcr.io/homelab-manager/agent:latest
AGENT_UPDATER_IMAGE=ghcr.io/homelab-manager/agent-updater:latest
HLM_AGENT_PORT=9090
HLM_ZFS_UID=1100
HLM_ZFS_GID=1100
DOCKER_GID=999
"
`;
